--- a/requirements.txt
+++ b/requirements.txt
@@ -19,12 +19,15 @@ Jinja2==3.0.3
 jsonschema==4.4.0
 Mako==1.1.6
 MarkupSafe==2.0.1
+psycopg2==2.7.7
+psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
 pyrsistent==0.18.1
+python-dotenv==0.19.2
 pytz==2021.3
 six==1.16.0
 SQLAlchemy==1.4.31
-typing-extensions==4.1.1
+typing_extensions==4.1.1
 Werkzeug==2.0.3
 zipp==3.7.0
